# multi-agent-crew-ai

./: README.md  requirements.txt
basic_crew/: README.md  pyproject.toml
basic_crew/output/: report.md
basic_crew/src/basic_crew/: crew.py  main.py
basic_crew/src/basic_crew/config/: agents.yaml  tasks.yaml
basic_flow/: README.md  pyproject.toml  report.md
basic_flow/output/: complete_report.md  doc_outline.json  guide_outline.json
basic_flow/src/basic_flow/: main.py
basic_flow/src/basic_flow/crews/addl_crew/: addl_crew.py
basic_flow/src/basic_flow/crews/addl_crew/config/: agents.yaml  tasks.yaml
