[project]
name = "basic_crew"
version = "0.1.0"
description = "basic_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.186.1,<1.0.0"
]

[project.scripts]
basic_crew = "basic_crew.main:run"
run_crew = "basic_crew.main:run"
train = "basic_crew.main:train"
replay = "basic_crew.main:replay"
test = "basic_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
