[project]
name = "basic_flow"
version = "0.1.0"
description = "basic_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.186.1,<1.0.0",
]

[project.scripts]
kickoff = "basic_flow.main:kickoff"
run_crew = "basic_flow.main:kickoff"
plot = "basic_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
